--- a/assets/src/app/login/index.tpl.html
+++ b/assets/src/app/login/index.tpl.html
@@ -3,7 +3,8 @@
 <div class="login-form container" style="min-height:100%;">
     <div class="row">
         <div class="col-md-12">
-            <h3>Login</h3><hr>
+            <h3>Login</h3>
+            <md-divider></md-divider><br>
             <form class="form-horizontal" role="form" action="/auth/local" method="post">
                 <div class="form-group">
                     <label for="inputUsername3" class="col-sm-2 control-label">Username</label>
@@ -25,7 +26,6 @@
             </form>
         </div>
     </div>
-    <hr>
     <div class="row">
         <div style="text-align:center">
             <a href="#">forgot password?</a>
