--- a/assets/styles/css/about.css
+++ b/assets/styles/css/about.css
@@ -1,19 +1,13 @@
 .imageContainer {
+  background:rgba(0,0,0,0.65);
   overflow:hidden;
-  //min-height: 100vh;
   min-height: 500px;
-  font-family: Jura;
+  font-family: 'Jura', sans-serif;
   margin:0;padding:0;border:0 none;position: relative;
 }
 .imageContainerDiv {
-  background-color:rgba(0,0,0,0.35);
-  //background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAAEFsT2yAAAACXBIWXMAAAsSAAALEgHS3X78AAAAFElEQVR4nGNhYGBwYIET////ZwAAETIDym2lzEcAAAAASUVORK5CYII=);
-  background-size: 2px 2px;
-  background-repeat: repeat;
-  background-position: 0 0;
-  width: 100%;
-  //height: 100vh;
-  height:500px;
+  width:100%;
+  height: 35em;
   display: flex;
   flex-direction: column;
 }
@@ -21,7 +15,6 @@
   color: rgba(255,255,255,0.9);
   font-size: 50px;
   font-weight: 400;
-  //text-align: center;
   margin: auto;
   margin-left:10%;
 }
