--- a/assets/src/app/account/index.tpl.html
+++ b/assets/src/app/account/index.tpl.html
@@ -64,19 +64,26 @@
 
 	<h3>Connected Accounts</h3>
 	<md-divider></md-divider><br>
-	<a class="btn btn-primary" href="/auth/facebook">connect facebook</a>
-	<a class="btn btn-primary" href="/auth/twitter">connect twitter</a>
-	<a class="btn btn-primary" href="/auth/google">connect google</a>
+
+	<a ng-show="!facebookPassport" class="btn btn-primary" href="/auth/facebook">connect facebook</a>
+	<!--information about profile here... socialAccount connection... load this for the backend.. use bidio as ex..{{socialAccount['facebook']}}-->
+	<a ng-show="facebookPassport" class="btn btn-primary" href="/auth/facebook">disconnect facebook</a>
+	<a ng-show="!twitterPassport"class="btn btn-primary" href="/auth/twitter">connect twitter</a>
+	<!--information about profile here... socialAccount connection... load this for the backend.. use bidio as ex..{{socialAccount['facebook']}}-->
+	<a ng-show="twitterPassport"class="btn btn-primary" href="/auth/twitter">disconnect twitter</a>
+	<a ng-show="!googlePassport"class="btn btn-primary" href="/auth/google">connect google</a>
+	<!--information about profile here... socialAccount connection... load this for the backend.. use bidio as ex..{{socialAccount['facebook']}}-->
+	<a ng-show="googlePassport"class="btn btn-primary" href="/auth/google">disconnect google</a>
+
 	<!--<a class="btn btn-primary" href="/auth/btc">connect btc wallet</a>-->
 	<br><br>
-	<div ng-repeat="passport in user.passports">
-		{{passport.protocol}}
-		{{passport.provider}}
-	</div>
+
 
 	<h3>settings</h3>
 	<md-divider></md-divider><br>
 	<h4>email settings</h4>
+	<a ng-show="localPassport.length==0" class="btn btn-primary" href="/auth/facebook">connect email</a>
+	<a ng-show="localPassport.length>0" class="btn btn-primary">reset password</a>
 
 	<h4>contact settings</h4>
 	<p>send email</p>
