--- a/assets/src/app/register/index.tpl.html
+++ b/assets/src/app/register/index.tpl.html
@@ -58,7 +58,7 @@
             <button style="width:100%" class="btn" type="submit">Sign up for Voetr</button>
         </form>
         <div style="text-align:center">
-            <a class="" href="/login">or login</a>
+            <a class="" href="/login">or Login</a>
         </div>
         <br><md-divider></md-divider>
         <div style="text-align:center;padding:2em">
