--- a/assets/src/app/committees/index.tpl.html
+++ b/assets/src/app/committees/index.tpl.html
@@ -4,7 +4,7 @@
 <md-subheader class="md-no-sticky">filter</md-subheader>
 <md-divider ></md-divider>
 <div>
-  <style type="text/css">
+  <!--<style type="text/css">
       .angular-google-map-container { height: 250px; box-shadow: 0 0 10px rgba(0,0,0,0.5); }
   </style>
   <div itemscope itemtype="Map" class="map-outter bottom-contact">
@@ -13,7 +13,7 @@
           </ui-gmap-google-map>
       </div>
   </div>
-</div>
+</div>-->
 <div ng-show="currentUser">
   <div style="margin-left:2%;margin-right:2%;">
     <form class="committee-input" role="form" ng-submit="createCommittee(newCommittee)">
