--- a/assets/src/app/login/index.tpl.html
+++ b/assets/src/app/login/index.tpl.html
@@ -52,7 +52,7 @@
         <h2><span class="inline-logo"><i style="color:#2ab996" class="fa fa-check"></i>oetr</span> - login</h2>
         <form role="form" action="/auth/local" method="post">
             <input name="identifier" placeholder="email or username" title="username" type="text"> 
-            <input placeholder="password" title="username" type="password"> 
+            <input name="password" placeholder="password" title="username" type="password"> 
             <button style="width:100%" class="btn" type="submit">Sign in</button> 
         </form>
         <div style="text-align:center">
