--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -121,8 +121,13 @@ background-color:red;
 
 <!--if not logged in-->
 <div ng-show="!currentUser">
-  <div ng-include="'intro/index.tpl.html'"></div>
-
+  <!--<div ng-include="'intro/index.tpl.html'"></div>-->
+  <div class="imageContainer">
+    <video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
+    <div class="imageContainerDiv">  
+      <h1>build empowerment, change consensus</h1>
+    </div>
+  </div>
   <!--
   <div class="imageContainer">
     <video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
