--- a/assets/styles/css/home.css
+++ b/assets/styles/css/home.css
@@ -3,12 +3,12 @@
 	padding-bottom:50px;
 }
 #register{
-	background-color:#f1f0ed;
+	background-color:#fff;
 	padding-top:50px;
 	padding-bottom:50px;
 }
 #bills{
-	background-color:#EBEBEB;
+	background-color:#fff;
 	padding-top:50px;
 	padding-bottom:50px;
 }
@@ -18,7 +18,7 @@
 	padding-bottom:50px;
 }
 #members{
-	background-color:#f1f0ed;
+	background-color:#fff;
 	padding-top:50px;
 	padding-bottom:50px;
 }
