--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -384,7 +384,7 @@ hr {
 }
 .log-background {
   z-index: 1;
-  background: url(../../images/washington-dc.jpg) no-repeat center center fixed;
+  //background: url(../../images/washington-dc.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -398,7 +398,9 @@ hr {
   position:absolute;
   height: 100%;
   width:100%;
-  background: rgba(0,0,0,0.5);
+  //background: rgba(0,0,0,0.5);
+  background: rgba(0,0,0,0);
+
 }
 .log-form {
   z-index: 3;
