--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -41,6 +41,8 @@
 
 	      <button class="btn btn-default">contact</button><br>
 
+	      {{user.socialAccounts}}
+
 	      <!--can have dif reps per committee-->
 	      <!--represented by (list of reps with each committee)-->
 	      <div ng-show="currentUser.id == member.id">
