social accounts and vote card

--- a/assets/src/app/vote/index.tpl.html
+++ b/assets/src/app/vote/index.tpl.html
@@ -9,24 +9,25 @@
 		<!--<h3>{{vote.otherCount}}</h3>-->
 		<button class="btn btn-default" ng-click="createVote(1)"><i class="fa fa-caret-up"></i></button>
         <button class="btn btn-default" ng-click="createVote(-1)"><i class="fa fa-caret-down"></i></button>
-		<h5><a href="bill/{{vote.bill.id}}/{{vote.bill.urlTitle}}">{{vote.bill.title}}</a></h5>
+		<h4><a href="bill/{{vote.bill.id}}/{{vote.bill.urlTitle}}">{{vote.bill.title}}</a></h4>
 		<md-divider></md-divider>
 		<br><br>
-		<div class="voteVoteContainer">
+		<!--UI/UX - break out into YES / NO - show representative votes -->
+		<div class="voteVoteContainer md-padding" layout="row" layout-align="center" layout-wrap>
 
-			<md-card class="voteVote" ng-repeat="vote in votes">
+			<md-card flex="30" class="voteVote" ng-repeat="vote in votes">
+				<a href="/member/{{vote.user.username}}">
+	            	<img ng-src="{{vote.user.avatarUrl}}" class="md-card-image" alt="{{vote.user.username}}">
+	            </a>
 				<md-card-title>
 					<md-card-title-text>
 						<a href="/member/{{vote.user.username}}">
 							<!--<img src="{{vote.user.avatarUrl}}" style="height:64px;">-->
-							{{vote.user.username}}
+							<h4>{{vote.user.username}}</h4>
 						</a>
 						<h4>{{vote.voteString}}</h4>
 					</md-card-title-text>
 				</md-card-title>
-				<md-card-title-media>
-					<div class="md-media-lg card-media"><img class="avatar" src="{{vote.user.username}}"/></div>
-				</md-card-title-media>
 			</md-card>
 
 		</div>
