--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -41,7 +41,7 @@
 
 	      <button class="btn btn-default">contact</button><br>
 
-	      {{user.socialAccounts}}
+	      {{member.socialAccounts}}
 
 	      <!--can have dif reps per committee-->
 	      <!--represented by (list of reps with each committee)-->
