--- a/assets/src/app/account/index.tpl.html
+++ b/assets/src/app/account/index.tpl.html
@@ -35,9 +35,10 @@
 		<button type="submit" class="btn btn-primary">Save</button>
 	</form>
 
-	<br><br><br>
+	<br><br>
 	<md-divider></md-divider>
 
+	<!--
 	<h3>Update Avatar</h3>
 	<div ngf-accept="'image/*'" ngf-drop ngf-select="uploadAvatar($file)" ng-model="file" class="drop-box" ngf-drag-over-class="dragover" ngf-allow-dir="true">
 		<div>Drag photos or click here to upload.</div>
@@ -55,20 +56,37 @@
 	<div ng-show="coverLoading" class="progress">
 		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{coverPercentage}}%;"></div>
 	</div>
+	-->
+
+	<h3>Verified Account</h3>
+	<md-divider></md-divider>
+	<h4>government identification</h4>
+	<p>by providing official identification, government officials have more of an inventive to respond and your voice carries more weight.</p>
+	<div ngf-accept="'image/*'" ngf-drop ngf-select="uploadIdentification($file)" ng-model="file" class="drop-box" ngf-drag-over-class="dragover" ngf-allow-dir="true">
+		<img ng-show="user.identificationUrl" src="{{user.identificationUrl}}">
+	</div>
+	<p ng-show="identificationLoading" style="text-align:center"><i class="fa fa-spin fa-spinner"></i>&nbsp;{{pp}}%</p>
+	<div ng-show="identificationLoading" class="progress">
+		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{identificationPercentage}}%;"></div>
+	</div>
+	<br>
+	<p>address</p>
+	<!--<p>ssn</p>-->
 
 	<h3>Connected Accounts</h3>
 	<md-divider></md-divider><br>
-
-	{{user}}
 	<a ng-show="!facebookPassport" class="btn btn-primary" href="/auth/facebook">connect facebook</a>
-	<!--information about profile here... socialAccount connection... load this for the backend.. use bidio as ex..{{socialAccount['facebook']}}-->
 	<a ng-show="facebookPassport" class="btn btn-primary" ng-click="removePassport('facebook')">disconnect facebook</a>
+	<!--information about profile here... socialAccount connection... load this for the backend.. use bidio as ex..{{socialAccount['facebook']}}-->
 	<a ng-show="!twitterPassport"class="btn btn-primary" href="/auth/twitter">connect twitter</a>
-	<!--information about profile here... socialAccount connection... load this for the backend.. use bidio as ex..{{socialAccount['facebook']}}-->
 	<a ng-show="twitterPassport"class="btn btn-primary" ng-click="removePassport('twitter')">disconnect twitter</a>
+	<a href="{{user.socialAccounts.twitter.profileUrl}}">
+		<img src="{{user.socialAccounts.twitter.profilePic}}">
+		<span>{{user.socialAccounts.twitter.handle}}</span>
+	</a>
 	<a ng-show="!googlePassport"class="btn btn-primary" href="/auth/google">connect google</a>
-	<!--information about profile here... socialAccount connection... load this for the backend.. use bidio as ex..{{socialAccount['facebook']}}-->
 	<a ng-show="googlePassport"class="btn btn-primary" ng-click="removePassport('google')">disconnect google</a>
+	<!--information about profile here... socialAccount connection... load this for the backend.. use bidio as ex..{{socialAccount['facebook']}}-->
 
 	<!--<a class="btn btn-primary" href="/auth/btc">connect btc wallet</a>-->
 	<br><br>
@@ -85,19 +103,6 @@
 	<p>send fax</p>
 	<p>send letter</p>
 	<!--<p>all activity, per vote.. on creation of bill, on profile comment</p>-->
-
-	<h4>verified account</h4>
-	<h4>government identification</h4>
-	<p>by providing official identification, government officials have more of an inventive to respond and your voice carries more weight.</p>
-	<div ngf-accept="'image/*'" ngf-drop ngf-select="uploadIdentification($file)" ng-model="file" class="drop-box" ngf-drag-over-class="dragover" ngf-allow-dir="true">
-		<img ng-show="user.identificationUrl" src="{{user.identificationUrl}}">
-	</div>
-	<p ng-show="identificationLoading" style="text-align:center"><i class="fa fa-spin fa-spinner"></i>&nbsp;{{pp}}%</p>
-	<div ng-show="identificationLoading" class="progress">
-		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{identificationPercentage}}%;"></div>
-	</div>
-	<br>
-	<!--<p>ssn</p>-->
 
 	<div style="height:100px;"></div>
 
