--- a/assets/src/app/account/index.tpl.html
+++ b/assets/src/app/account/index.tpl.html
@@ -78,19 +78,31 @@
 
 	<h3>Connected Accounts</h3>
 	<md-divider></md-divider><br>
-	{{user.socialAccounts}}
+	<a href="{{user.socialAccounts.facebook.profileUrl}}">
+		<img style="height:64px;" src="{{user.socialAccounts.facebook.profilePic}}">
+		<span>{{user.socialAccounts.facebook.displayName}}</span>
+	</a>
 	<a ng-show="!facebookPassport" class="btn btn-primary" href="/auth/facebook">connect facebook</a>
 	<a ng-show="facebookPassport" class="btn btn-primary" ng-click="removePassport('facebook')">disconnect facebook</a>
-	<!--information about profile here... socialAccount connection... load this for the backend.. use bidio as ex..{{socialAccount['facebook']}}-->
+
+	<br><br>
 	<a ng-show="!twitterPassport"class="btn btn-primary" href="/auth/twitter">connect twitter</a>
-	<a ng-show="twitterPassport"class="btn btn-primary" ng-click="removePassport('twitter')">disconnect twitter</a>
 	<a href="{{user.socialAccounts.twitter.profileUrl}}">
-		<img src="{{user.socialAccounts.twitter.profilePic}}">
+		<img style="height:64px;" src="{{user.socialAccounts.twitter.profilePic}}">
 		<span>{{user.socialAccounts.twitter.handle}}</span>
 	</a>
+	<a ng-show="!twitterPassport"class="btn btn-primary" href="/auth/twitter">connect twitter</a>
+	<a ng-show="twitterPassport"class="btn btn-primary" ng-click="removePassport('twitter')">disconnect twitter</a>
+
+	<br><br>
+	<!--
+	<a href="{{user.socialAccounts.twitter.profileUrl}}">
+		<img src="{{user.socialAccounts.twitter.profilePic}}">
+		<span>{{user.socialAccounts.google.handle}}</span>
+	</a>
+	-->
 	<a ng-show="!googlePassport"class="btn btn-primary" href="/auth/google">connect google</a>
 	<a ng-show="googlePassport"class="btn btn-primary" ng-click="removePassport('google')">disconnect google</a>
-	<!--information about profile here... socialAccount connection... load this for the backend.. use bidio as ex..{{socialAccount['facebook']}}-->
 
 	<!--<a class="btn btn-primary" href="/auth/btc">connect btc wallet</a>-->
 	<br><br>
